--- a/coffe-house/src/styles/styles.scss
+++ b/coffe-house/src/styles/styles.scss
@@ -1,8 +1,5 @@
-h1 {
-  color: red;
-}
+@import url('https://fonts.cdnfonts.com/css/inter?styles=29139,29140,29141');
 
-img {
-  width: 100px;
-  height: 100px;
+body {
+  font-family: 'Inter', sans-serif;
 }
