--- a/coffe-house/src/styles/styles.scss
+++ b/coffe-house/src/styles/styles.scss
@@ -1,5 +1,11 @@
 @import url('https://fonts.cdnfonts.com/css/inter?styles=29139,29140,29141');
+@import './color-vars.scss';
+@import './typography-classes.scss';
 
 body {
   font-family: 'Inter', sans-serif;
+}
+
+h1 {
+  color: $border-light;
 }
