feat: add hero section

--- a/coffe-house/src/styles/styles.scss
+++ b/coffe-house/src/styles/styles.scss
@@ -2,6 +2,7 @@
 @import './color-vars.scss';
 @import './typography-classes.scss';
 
+@import './sections.scss';
 @import './components/header.scss';
 
 *,
