--- a/coffe-house/src/styles/components/_header.scss
+++ b/coffe-house/src/styles/components/_header.scss
@@ -1,7 +1,7 @@
 .header {
   display: flex;
   justify-content: space-between;
-  padding: 20px 0;
+  padding: 20px 0 17px;
 
   nav {
     padding: 16px 0;
