feat: add favourite coffee section

--- a/coffe-house/src/styles/_sections.scss
+++ b/coffe-house/src/styles/_sections.scss
@@ -1,51 +1,2 @@
-.hero {
-  height: 644px;
-  padding: 100px;
-  border-radius: 40px;
-
-  background-image: url('../assets/images/img-hero.jpg');
-  background-size: cover;
-  background-position: 0% 55%;
-
-  &__content {
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
-    max-width: 530px;
-  }
-
-  &__heading {
-    color: $text-light;
-
-    span {
-      color: $text-accent;
-    }
-  }
-
-  &__text {
-    color: $text-light;
-  }
-
-  &__menu-link {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 8px;
-    width: 200px;
-    padding: 20px 72px 20px 78px;
-    border-radius: 100px;
-
-    background-color: $background-body;
-
-    img {
-      width: 0;
-      transition: width 0.4s linear;
-    }
-
-    &:hover {
-      img {
-        width: 100%;
-      }
-    }
-  }
-}
+@import './sections/hero.scss';
+@import './sections/favourite-coffee.scss';
