--- a/coffe-house/src/styles/components/_header.scss
+++ b/coffe-house/src/styles/components/_header.scss
@@ -21,6 +21,8 @@
       ul {
         display: flex;
         justify-content: space-between;
+        cursor: pointer;
+
         // container for link and svg image
         div {
           display: flex;
