--- a/coffe-house/src/styles/sections/_hero.scss
+++ b/coffe-house/src/styles/sections/_hero.scss
@@ -2,6 +2,7 @@
   height: 644px;
   padding: 100px;
   border-radius: 40px;
+  margin-top: 0;
 
   background-image: url('../assets/images/img-hero.jpg');
   background-size: cover;
