--- a/coffe-house/src/styles/sections/_hero.scss
+++ b/coffe-house/src/styles/sections/_hero.scss
@@ -6,7 +6,7 @@
 
   background-image: url('../assets/images/img-hero.jpg');
   background-size: cover;
-  background-position: 0% 55%;
+  background-position: center;
 
   &__content {
     display: flex;
