feat: add mobile app section

--- a/coffe-house/src/styles/_sections.scss
+++ b/coffe-house/src/styles/_sections.scss
@@ -1,3 +1,4 @@
 @import './sections/hero.scss';
 @import './sections/favourite-coffee.scss';
 @import './sections/about.scss';
+@import './sections/mobile-app.scss';
