feat: add hover effect on about images

--- a/coffe-house/src/styles/styles.scss
+++ b/coffe-house/src/styles/styles.scss
@@ -88,6 +88,16 @@ button {
     }
   }
 
+  .about {
+    &__gallery {
+      .image {
+        &:hover {
+          transform: unset;
+        }
+      }
+    }
+  }
+
   .mobile-app {
     &__store {
       &:hover {
