--- a/coffe-house/src/styles/sections/_about.scss
+++ b/coffe-house/src/styles/sections/_about.scss
@@ -22,6 +22,13 @@
       width: 660px;
       border-radius: 20px;
       background-position: center;
+      background-repeat: no-repeat;
+
+      transition: transform 0.3s ease;
+
+      &:hover {
+        transform: scale(0.9);
+      }
     }
 
     .image-1 {
