--- a/coffe-house/src/styles/styles.scss
+++ b/coffe-house/src/styles/styles.scss
@@ -4,6 +4,7 @@
 
 @import './sections.scss';
 @import './components/header.scss';
+@import './components/footer.scss';
 
 *,
 *::before,
@@ -32,8 +33,7 @@ a {
   color: inherit;
 }
 
-section,
-footer {
+section {
   margin-top: 100px;
 }
 
@@ -62,6 +62,17 @@ button {
   &:hover {
     &::after {
       width: 100%;
+    }
+  }
+
+  &__footer {
+    &::after {
+      content: "";
+      display: block;
+      width: 0;
+      margin-top: 5px;
+      border-bottom: 2px solid $text-light;
+      transition: width 0.3s ease;
     }
   }
 }
@@ -109,6 +120,23 @@ button {
 
         img {
           filter: none;
+        }
+      }
+    }
+  }
+
+  .footer {
+    &__social {
+      ul {
+        li {
+          &:hover {
+            border: 1px solid $border-light;
+            background-color: transparent;
+
+            img {
+              filter: unset;
+            }
+          }
         }
       }
     }
