--- a/coffe-house/src/styles/sections/_about.scss
+++ b/coffe-house/src/styles/sections/_about.scss
@@ -36,19 +36,19 @@
     }
 
     .image-1 {
-      background-image: url('../assets/images/about/about-1.jpg');
+      background-image: url('../../assets/images/about/about-1.jpg');
     }
 
     .image-2 {
-      background-image: url('../assets/images/about/about-2.jpg');
+      background-image: url('../../assets/images/about/about-2.jpg');
     }
 
     .image-3 {
-      background-image: url('../assets/images/about/about-3.jpg');
+      background-image: url('../../assets/images/about/about-3.jpg');
     }
 
     .image-4 {
-      background-image: url('../assets/images/about/about-4.jpg');
+      background-image: url('../../assets/images/about/about-4.jpg');
     }
 
     .img-small {
