--- a/coffe-house/src/styles/sections/_hero.scss
+++ b/coffe-house/src/styles/sections/_hero.scss
@@ -4,7 +4,7 @@
   border-radius: 40px;
   margin-top: 0;
 
-  background-image: url('../assets/images/img-hero.jpg');
+  background-image: url('../../assets/images/img-hero.jpg');
   background-size: cover;
   background-position: center;
 
