--- a/coffe-house/src/styles/sections/_mobile-app.scss
+++ b/coffe-house/src/styles/sections/_mobile-app.scss
@@ -10,6 +10,13 @@
     margin-top: 144px;
   }
 
+  &__image {
+    img {
+
+      width: 100%;
+    }
+  }
+
   &__heading {
     em {
       color: $text-accent;
