feat: add heading to menu page

--- a/coffe-house/src/styles/_sections.scss
+++ b/coffe-house/src/styles/_sections.scss
@@ -2,3 +2,4 @@
 @import './sections/favourite-coffee.scss';
 @import './sections/about.scss';
 @import './sections/mobile-app.scss';
+@import './sections/menu.scss';
