--- a/coffe-house/src/styles/sections/_menu.scss
+++ b/coffe-house/src/styles/sections/_menu.scss
@@ -9,4 +9,41 @@
       color: $text-accent;
     }
   }
+
+  &__options {
+    display: flex;
+    justify-content: center;
+    gap: 16px;
+    margin-top: 40px;
+  }
+
+  &__option {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    padding: 8px 16px 8px 8px;
+    border: 1px solid $border-light;
+    border-radius: 100px;
+
+    color: $text-dark;
+
+    span {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 30px;
+      height: 30px;
+      border-radius: 100px;
+      background-color: $border-light;
+    }
+
+    &.active {
+      background-color: $background-container;
+      color: $text-light;
+
+      span {
+        background-color: $background-body;
+      }
+    }
+  }
 }
