--- a/coffe-house/src/styles/styles.scss
+++ b/coffe-house/src/styles/styles.scss
@@ -5,6 +5,7 @@
 @import './sections.scss';
 @import './components/header.scss';
 @import './components/footer.scss';
+@import './components/menu-item.scss';
 
 *,
 *::before,
@@ -58,6 +59,12 @@ button {
     width: 0;
     border-bottom: 2px solid $text-dark;
     transition: width 0.3s ease;
+  }
+
+  &.active {
+    &::after {
+      width: 100%;
+    }
   }
   &:hover {
     &::after {
