--- a/coffe-house/src/styles/components/_menu-item.scss
+++ b/coffe-house/src/styles/components/_menu-item.scss
@@ -18,18 +18,26 @@
     @media (hover:hover) {
       &:hover {
         .menu__item-photo {
-          transform: scale(0.9);
+          img {
+            transform: scale(0.92);
+          }
         }
       }
     }
   }
 
   &__item-photo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
     height: 310px;
     border-radius: 40px;
     background-position: center;
 
-    transition: transform 0.3s ease;
+    img {
+      transition: transform 0.3s ease;
+    }
   }
 
   &__item-description {
@@ -43,29 +51,4 @@
       margin-top: auto;
     }
   }
-}
-
-.coffee-1 {
-  background-image: url('../../assets/images/menu/coffee-1.jpg');
-}
-.coffee-2 {
-  background-image: url('../../assets/images/menu/coffee-2.jpg');
-}
-.coffee-3 {
-  background-image: url('../../assets/images/menu/coffee-3.jpg');
-}
-.coffee-4 {
-  background-image: url('../../assets/images/menu/coffee-4.jpg');
-}
-.coffee-5 {
-  background-image: url('../../assets/images/menu/coffee-5.jpg');
-}
-.coffee-6 {
-  background-image: url('../../assets/images/menu/coffee-6.jpg');
-}
-.coffee-7 {
-  background-image: url('../../assets/images/menu/coffee-7.jpg');
-}
-.coffee-8 {
-  background-image: url('../../assets/images/menu/coffee-8.jpg');
 }
