fix: responsive images in about section

--- a/coffe-house/src/styles/sections/_about.scss
+++ b/coffe-house/src/styles/sections/_about.scss
@@ -31,8 +31,12 @@
       background-position: center;
       background-repeat: no-repeat;
       overflow: hidden;
+      position: relative;
+      z-index: 1;
 
       img {
+        position: absolute;
+        z-index: -1;
         transition: transform 0.3s ease;
       }
 
@@ -41,22 +45,6 @@
           transform: scale(0.92);
         }
       }
-    }
-
-    .image-1 {
-      background-image: url('../../assets/images/about/about-1.jpg');
-    }
-
-    .image-2 {
-      background-image: url('../../assets/images/about/about-2.jpg');
-    }
-
-    .image-3 {
-      background-image: url('../../assets/images/about/about-3.jpg');
-    }
-
-    .image-4 {
-      background-image: url('../../assets/images/about/about-4.jpg');
     }
 
     .img-small {
