--- a/coffe-house/src/styles/sections/_favourite-coffee.scss
+++ b/coffe-house/src/styles/sections/_favourite-coffee.scss
@@ -69,11 +69,13 @@
 
     cursor: pointer;
 
-    &:hover {
-      background-color: $background-container;
+    @media (hover: hover) {
+      &:hover {
+        background-color: $background-container;
 
-      img {
-        filter: invert(83%) sepia(19%) saturate(152%) hue-rotate(346deg) brightness(102%) contrast(89%);
+        img {
+          filter: invert(83%) sepia(19%) saturate(152%) hue-rotate(346deg) brightness(102%) contrast(89%);
+        }
       }
     }
   }
