--- a/coffe-house/src/styles/styles.scss
+++ b/coffe-house/src/styles/styles.scss
@@ -67,9 +67,12 @@ button {
       margin-top: 2px;
     }
   }
-  &:hover {
-    &::after {
-      width: 100%;
+
+  @media (hover: hover) {
+    &:hover {
+      &::after {
+        width: 100%;
+      }
     }
   }
 
@@ -81,72 +84,6 @@ button {
       margin-top: 5px;
       border-bottom: 2px solid $text-light;
       transition: width 0.3s ease;
-    }
-  }
-}
-
-@media (hover:none) {
-  .nav-link {
-    &:hover {
-      &::after {
-        width: 0;
-      }
-    }
-  }
-
-  .slider {
-    &__back,
-    &__next {
-      &:hover {
-        background-color: transparent;
-
-        img {
-          filter: unset;
-        }
-      }
-    }
-  }
-
-  .about {
-    &__gallery {
-      .image {
-        &:hover {
-          transform: unset;
-        }
-      }
-    }
-  }
-
-  .mobile-app {
-    &__store {
-      &:hover {
-        background-color: transparent;
-
-        .store-text {
-          color: $text-dark;
-        }
-
-        img {
-          filter: none;
-        }
-      }
-    }
-  }
-
-  .footer {
-    &__social {
-      ul {
-        li {
-          &:hover {
-            border: 1px solid $border-light;
-            background-color: transparent;
-
-            img {
-              filter: unset;
-            }
-          }
-        }
-      }
     }
   }
 }
