--- a/coffe-house/src/styles/sections/_mobile-app.scss
+++ b/coffe-house/src/styles/sections/_mobile-app.scss
@@ -50,15 +50,17 @@
       transition: color 0.3s ease;
     }
 
-    &:hover {
-      background-color: $background-container;
+    @media (hover: hover) {
+      &:hover {
+        background-color: $background-container;
 
-      .store-text {
-        color: $text-light;
-      }
+        .store-text {
+          color: $text-light;
+        }
 
-      img {
-        filter: invert(99%) sepia(93%) saturate(376%) hue-rotate(302deg) brightness(97%) contrast(81%);filter: invert(86%) sepia(8%) saturate(361%) hue-rotate(346deg) brightness(103%) contrast(85%);
+        img {
+          filter: invert(99%) sepia(93%) saturate(376%) hue-rotate(302deg) brightness(97%) contrast(81%);filter: invert(86%) sepia(8%) saturate(361%) hue-rotate(346deg) brightness(103%) contrast(85%);
+        }
       }
     }
   }
