--- a/coffe-house/src/styles/_typography-classes.scss
+++ b/coffe-house/src/styles/_typography-classes.scss
@@ -3,6 +3,11 @@
   font-weight: 600;
   line-height: 105%;
 
+  @media (max-width: 768px) {
+    font-size: 42px;
+    line-height: 115%;
+  }
+
   &.accent {
     font-style: italic;
   }
@@ -12,6 +17,11 @@
   font-size: 60px;
   font-weight: 600;
   line-height: 125%;
+
+  @media (max-width: 768px) {
+    font-size: 32px;
+    line-height: 125%;
+  }
 
   &.accent {
     font-style: italic;
