--- a/coffe-house/src/styles/sections/_favourite-coffee.scss
+++ b/coffe-house/src/styles/sections/_favourite-coffee.scss
@@ -69,6 +69,10 @@
 
     cursor: pointer;
 
+    @media (max-width: 768px) {
+      top: 42%;
+    }
+
     @media (hover: hover) {
       &:hover {
         background-color: $background-container;
