feat: add tablet styles for footer and mobile app section

--- a/coffe-house/src/styles/components/_footer.scss
+++ b/coffe-house/src/styles/components/_footer.scss
@@ -9,6 +9,13 @@
   border-radius: 40px;
   background-color: $background-container;
 
+  @media (max-width: 768px) {
+    padding: 100px 60px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 100px;
+  }
+
   &--menu {
     margin-top: 100px;
   }
@@ -16,6 +23,9 @@
   &__left,
   &__right {
     flex-basis: 530px;
+    @media (max-width: 768px) {
+      flex-basis: unset;
+    }
   }
 
   &__right {
@@ -85,6 +95,7 @@
         width: 100%;
         align-items: center;
         gap: 8px;
+        letter-spacing: 0.3px;
       }
     }
   }
