--- a/coffe-house/src/styles/sections/_mobile-app.scss
+++ b/coffe-house/src/styles/sections/_mobile-app.scss
@@ -2,18 +2,36 @@
   display: flex;
   justify-content: space-between;
 
+  @media (max-width: 768px) {
+    flex-direction: column;
+  }
+
   &__content {
     display: flex;
     flex-direction: column;
     gap: 40px;
     max-width: 630px;
     margin-top: 144px;
+
+    @media (max-width: 768px) {
+      margin-top: 0;
+      max-width: unset;
+    }
   }
 
   &__image {
+    @media (max-width: 768px) {
+      margin-top: 100px;
+    }
     img {
-
       width: 100%;
+
+      @media (max-width: 768px) {
+        width: 630px;
+        height: 630px;
+        position: relative;
+        left: 28px;
+      }
     }
   }
 
