fix: hide burger menu on desktop and cross check errors

--- a/coffe-house/src/styles/components/_header.scss
+++ b/coffe-house/src/styles/components/_header.scss
@@ -86,6 +86,10 @@
   }
 
   &__burger-button {
+    display: none;
+    @media (max-width: 768px) {
+      display: block;
+    }
     width: 44px;
     height: 44px;
     border: 1px solid $border-dark;
