--- a/coffe-house/src/styles/components/_footer.scss
+++ b/coffe-house/src/styles/components/_footer.scss
@@ -16,6 +16,11 @@
     gap: 100px;
   }
 
+  @media (max-width: 720px) {
+    padding: 60px 16px;
+    gap: 42px;
+  }
+
   &--menu {
     margin-top: 100px;
   }
