--- a/coffe-house/src/styles/components/_menu-item.scss
+++ b/coffe-house/src/styles/components/_menu-item.scss
@@ -14,6 +14,13 @@
       justify-content: space-between;
       margin-top: 38px;
     }
+
+    @media (max-width: 720px) {
+      grid-template-columns: 1fr;
+      grid-template-rows: 1fr;
+      justify-items: center;
+      padding: 0 20px;
+    }
   }
 
   &__item {
