--- a/coffe-house/src/styles/sections/_mobile-app.scss
+++ b/coffe-house/src/styles/sections/_mobile-app.scss
@@ -23,14 +23,24 @@
     @media (max-width: 768px) {
       margin-top: 100px;
     }
+
+    @media (max-width: 720px) {
+      margin-top: 40px;
+    }
     img {
       width: 100%;
 
       @media (max-width: 768px) {
-        width: 630px;
-        height: 630px;
+        max-width: 630px;
+        max-height: 630px;
         position: relative;
         left: 28px;
+      }
+
+      @media (max-width: 720px) {
+        max-width: 348px;
+        max-height: 348px;
+        position: static;
       }
     }
   }
@@ -44,6 +54,10 @@
   &__stores {
     display: flex;
     gap: 20px;
+
+    @media (max-width: 720px) {
+      flex-direction: column;
+    }
   }
 
   &__store {
