--- a/coffe-house/src/styles/components/_header.scss
+++ b/coffe-house/src/styles/components/_header.scss
@@ -4,9 +4,9 @@
   padding: 20px 0 17px;
 
   &__nav {
-    transition: left 0.3s ease;
+    transition: right 0.4s ease;
     &.active {
-      left: 0;
+      right: 0;
     }
     &--page {
       width: 100%;
@@ -18,7 +18,7 @@
         max-width: 768px;
         position: fixed;
         top: 101px;
-        left: -100%;
+        right: -100%;
         padding: 60px 40px;
         z-index: 2;
 
@@ -47,7 +47,7 @@
         justify-content: center;
         width: 100%;
         position: fixed;
-        left: -100%;
+        right: -100%;
         top: 585px;
         z-index: 3;
 
