--- a/coffe-house/src/styles/sections/_hero.scss
+++ b/coffe-house/src/styles/sections/_hero.scss
@@ -3,10 +3,12 @@
   padding: 100px;
   border-radius: 40px;
   margin-top: 0;
+  position: relative;
+  overflow: hidden;
 
-  background-image: url('../../assets/images/img-hero.jpg');
-  background-size: cover;
-  background-position: center;
+  // background-image: url('../../assets/images/img-hero.jpg');
+  // background-size: cover;
+  // background-position: center;
 
   @media (max-width: 768px) {
     padding: 100px 98px 100px 60px;
@@ -15,6 +17,27 @@
   @media (max-width: 720px) {
     padding: 60px 16px;
     height: 552px;
+  }
+
+  &__video {
+    width: 1440px;
+    height: 759px;
+    position: absolute;
+    top: -70px;
+    left: -20px;
+    z-index: -1;
+
+    @media (max-width: 768px) {
+      width: 1310px;
+      left: -282px;
+    }
+
+    @media (max-width: 425px) {
+      width: 1100px;
+      height: 670px;
+      top: -65px;
+      left: -240px;
+    }
   }
 
   &__content {
