--- a/coffe-house/src/styles/styles.scss
+++ b/coffe-house/src/styles/styles.scss
@@ -6,6 +6,7 @@
 @import './components/header.scss';
 @import './components/footer.scss';
 @import './components/menu-item.scss';
+@import './components/modal.scss';
 
 *,
 *::before,
