--- a/coffe-house/src/styles/components/_header.scss
+++ b/coffe-house/src/styles/components/_header.scss
@@ -17,9 +17,9 @@
         height: 100vh;
         max-width: 768px;
         position: fixed;
-        top: 100px;
+        top: 80px;
         right: -100%;
-        padding: 60px 40px;
+        padding: 80px 40px 60px;
         z-index: 2;
 
         background-color: $background-body;
