--- a/coffe-house/src/styles/sections/_favourite-coffee.scss
+++ b/coffe-house/src/styles/sections/_favourite-coffee.scss
@@ -25,6 +25,11 @@
       width: 348px;
       height: 570px;
     }
+
+    @media (max-width: 380px) {
+      max-width: 348px;
+      width: 100%;
+    }
   }
 
   &__item {
@@ -38,6 +43,10 @@
 
     transition: transform 0.7s ease;
 
+    @media (max-width: 380px) {
+      overflow: hidden;
+    }
+
     img {
       width: 480px;
       height: 480px;
@@ -50,7 +59,6 @@
 
     @for $i from 1 through 3 {
       &--#{$i} {
-        // transform: translateX('#{($i - 1)}%')
         transform: translateX(#{100 * ($i - 1)} + '%');
       }
     }
