--- a/coffe-house/src/styles/sections/_hero.scss
+++ b/coffe-house/src/styles/sections/_hero.scss
@@ -14,6 +14,10 @@
     padding: 100px 98px 100px 60px;
   }
 
+  @media (max-width: 754px) {
+    padding: 30px 98px 100px 60px;
+  }
+
   @media (max-width: 720px) {
     padding: 60px 16px;
     height: 552px;
@@ -27,7 +31,7 @@
     width: 1440px;
     height: 759px;
     position: absolute;
-    top: -70px;
+    top: -38px;
     left: -20px;
     z-index: -1;
 
